add logout, fix some bugs with login
Signed-off-by: Alex Kofke <akofke@gmail.com>

--- a/tridents/templates/_login.html
+++ b/tridents/templates/_login.html
@@ -10,7 +10,11 @@
         }
     });
 
-    document.getElementById('login').addEventListener('click', function() {
-        lock.show();
-    });
+    var loginBtn = document.getElementById('login');
+
+    if(loginBtn !== null) {
+        loginBtn.addEventListener('click', function() {
+            lock.show();
+        });
+    }
 </script>
