--- a/tridents/templates/home.html
+++ b/tridents/templates/home.html
@@ -42,9 +42,13 @@
 {% block content %}
     <div class="container-fluid">
         <div class="columns">
-            <div class="column">
+            <div class="column is-two-thirds">
                 <div class="box" id="calendar">
                 </div>
+            </div>
+
+            <div class="column">
+                <h1 class="title">Posts</h1>
             </div>
         </div>
     </div>
