--- a/tridents/static/css/home.css
+++ b/tridents/static/css/home.css
@@ -17,3 +17,11 @@
     background: dimgray;
     border-color: dimgray;
 }
+
+.fc-list-item {
+    color: white;
+}
+
+.fc-list-item:hover {
+    color: #4a4a4a;
+}
