--- a/tridents/static/css/layout.css
+++ b/tridents/static/css/layout.css
@@ -1,3 +1,13 @@
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
+}
+
 #Navbar-logo {
     max-width: 100px;
 }
@@ -5,4 +15,8 @@
 #Navbar-logo > img {
     max-height: 100%;
     filter: drop-shadow(-3px 3px 3px rgba(0, 0, 0, 0.4));
+}
+
+#Navbar-home-link:hover img {
+    filter: drop-shadow(-3px 3px 3px rgba(0, 96, 42, 0.4));
 }
