--- a/tridents/templates/home.html
+++ b/tridents/templates/home.html
@@ -64,6 +64,21 @@
 
             <div class="column">
                 <h1 class="title">Posts</h1>
+
+                {% for post in posts %}
+                    <div class="card">
+                        <header class="card-header">
+                            <p class="card-header-title">{{ post.title }}</p>
+                        </header>
+
+                        <div class="card-content">
+                            <div class="content">{{ post.body }}</div>
+                            <div class="content"><small>{{ post.publish_date|datetimeformat }} by <strong>{{ post.author }}</strong></small></div>
+                        </div>
+                    </div>
+
+                {% endfor %}
+
             </div>
         </div>
     </div>
