begin contact page and form
Signed-off-by: Alex Kofke <akofke@gmail.com>

--- a/tridents/templates/layout.html
+++ b/tridents/templates/layout.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="nav-center">
-            <a href="" class="is-tab nav-item {{ active('contact') }}">Contact</a>
+            <a href="{{ url_for('contact') }}" class="is-tab nav-item {{ active('contact') }}">Contact</a>
 
             <a href="{{ url_for('home') }}" class="nav-item" id="Navbar-home-link">
                 <figure class="image" id="Navbar-logo">
