--- a/tridents/templates/layout.html
+++ b/tridents/templates/layout.html
@@ -53,6 +53,21 @@
     </div>
 </nav>
 
+{% with flashes = get_flashed_messages(with_categories=True) %}
+    {% if flashes %}
+        <section class="section" id="flashes">
+            <div class="container">
+                {% for category, message in flashes %}
+                    <div class="notification {{ category }}">
+                        <button class="delete"></button>
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            </div>
+        </section>
+    {% endif %}
+{% endwith %}
+
 <main role="main" class="section">
     {% block content %}{% endblock %}
 </main>
@@ -65,6 +80,19 @@
     </div>
 </footer>
 
+<script src="{{ url_for('static', filename='vendor/jquery.min.js') }}"></script>
+<script>
+    var flashesSection = $('#flashes');
+    $(document).on('click', '.delete', function(e) {
+        e.preventDefault();
+        $(this).parent().fadeOut(100, function() {
+            $(this).remove();
+            if(flashesSection.find('.container').children().length === 0) {
+                flashesSection.remove();
+            }
+        });
+    })
+</script>
 {% include '_login.html' %}
 {% block js %}{% endblock %}
 </body>
