--- a/tridents/templates/_login.html
+++ b/tridents/templates/_login.html
@@ -1,4 +1,4 @@
-<script src="http://cdn.auth0.com/js/lock/10.12.3/lock.min.js"></script>
+<script src="https://cdn.auth0.com/js/lock/10.12.3/lock.min.js"></script>
 <script>
     var lock = new Auth0Lock('{{ config['AUTH0_CLIENT_ID'] }}', 'tricountyrugby.auth0.com', {
         auth: {
