change officer control panel to only show up if user is an officer
Signed-off-by: Alex Kofke <akofke@gmail.com>

--- a/tridents/templates/home.html
+++ b/tridents/templates/home.html
@@ -46,7 +46,7 @@
 {% block content %}
     <div class="container-fluid">
         <div class="columns">
-            {% if user %}
+            {% if is_officer %}
                 <div class="column is-narrow">
                     <aside class="menu">
                         <p class="menu-label">Officer Control Panel</p>
