add pages for creating posts and viewing messages
Signed-off-by: Alex Kofke <akofke@gmail.com>

--- a/tridents/templates/home.html
+++ b/tridents/templates/home.html
@@ -51,7 +51,8 @@
                     <aside class="menu">
                         <p class="menu-label">Officer Control Panel</p>
                         <ul class="menu-list">
-                            <li><a href="">Create a Post</a></li>
+                            <li><a href="{{ url_for('posts') }}">Create a Post</a></li>
+                            <li><a href="{{ url_for('messages') }}">View Messages</a></li>
                         </ul>
                     </aside>
                 </div>
