add user to every template
Signed-off-by: Alex Kofke <akofke@gmail.com>

--- a/tridents/templates/messages.html
+++ b/tridents/templates/messages.html
@@ -4,6 +4,8 @@
 
 {% block content %}
     <div class="container">
+        <h1 class="title">Messages</h1>
+        <h3 class="subtitle">sent to the team using the Contact form</h3>
         {% for message in messages %}
 
             <div class="card">
