--- a/tridents/templates/layout.html
+++ b/tridents/templates/layout.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-<nav class="nav has-shadow is-dark">
+<nav class="nav has-shadow">
     <div class="container">
         <div class="nav-left">
             <span class="nav-item"></span>
