add markdown to homepage posts preview with truncation, change to bulma message

--- a/tridents/static/css/home.css
+++ b/tridents/static/css/home.css
@@ -26,7 +26,6 @@
     color: #4a4a4a;
 }
 
-.post-link:hover > .card {
-    /* inherit from bulma and change color */
-    box-shadow: 0 2px 3px rgba(0, 96, 42, 0.4), 0 0 0 1px rgba(0,96,42,.4);
+.post-preview {
+    margin-bottom: 1.5rem;
 }
