add link hover styling to post previews
Signed-off-by: Alex Kofke <akofke@gmail.com>

--- a/tridents/static/css/home.css
+++ b/tridents/static/css/home.css
@@ -29,3 +29,7 @@
 .post-preview {
     margin-bottom: 1.5rem;
 }
+
+a.post-link:hover > .post-preview {
+    box-shadow: 0 0 3px 2px rgba(0, 96, 42, 0.5);
+}
