homepage only columns on desktop

--- a/tridents/templates/home.html
+++ b/tridents/templates/home.html
@@ -45,7 +45,7 @@
 
 {% block content %}
     <div class="container-fluid">
-        <div class="columns">
+        <div class="columns is-desktop">
             {% if is_officer %}
                 <div class="column is-narrow">
                     <aside class="menu">
