add font awesome and begin additions to splash page
Signed-off-by: Alex Kofke <akofke@gmail.com>

--- a/tridents/templates/home.html
+++ b/tridents/templates/home.html
@@ -51,8 +51,8 @@
                     <aside class="menu">
                         <p class="menu-label">Officer Control Panel</p>
                         <ul class="menu-list">
-                            <li><a href="{{ url_for('posts') }}">Create a Post</a></li>
-                            <li><a href="{{ url_for('messages') }}">View Messages</a></li>
+                            <li><a href="{{ url_for('posts') }}"><i class="fa fa-fw fa-pencil"></i>&nbsp;Create a Post</a></li>
+                            <li><a href="{{ url_for('messages') }}"><i class="fa fa-fw fa-envelope"></i>&nbsp;View Messages</a></li>
                         </ul>
                     </aside>
                 </div>
