--- a/tridents/templates/layout.html
+++ b/tridents/templates/layout.html
@@ -81,6 +81,7 @@
 </footer>
 
 <script src="{{ url_for('static', filename='vendor/jquery.min.js') }}"></script>
+<script src="https://use.fontawesome.com/2ce45b9f6b.js"></script>
 <script>
     var flashesSection = $('#flashes');
     $(document).on('click', '.delete', function(e) {
