--- a/tridents/static/css/splash.css
+++ b/tridents/static/css/splash.css
@@ -51,3 +51,12 @@
 #SplashPage-logo > img {
     filter: drop-shadow(-5px 5px 5px rgba(0, 0, 0, 0.8));
 }
+
+#down-arrow {
+    padding-bottom: 20px;
+}
+
+#team-round {
+    max-width: 400px;
+    border-radius: 50%;
+}
