add 'placeholders' to splash page

--- a/tridents/templates/splash.html
+++ b/tridents/templates/splash.html
@@ -62,8 +62,24 @@
                 <div class="column">
                     <h1 class="title is-1">Who are we?</h1>
                     <p class="content is-large">
+                        sick cunts that's who
                     </p>
 
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="hero is-medium is-dark" id="why-rugby">
+    <div class="hero-body">
+        <div class="container">
+            <div class="columns">
+                <div class="column">
+                    <h1 class="title is-1">Why rugby?</h1>
+                    <p class="content is-large is-dark">
+                        its fuckn awesome
+                    </p>
                 </div>
             </div>
         </div>
