--- a/tridents/templates/splash.html
+++ b/tridents/templates/splash.html
@@ -26,7 +26,11 @@
                     <h1 class="title">Tri-County Tridents</h1>
                     <h3 class="subtitle">Rugby Football Club</h3>
 
-                    <p>A social rugby club based in Lockport, NY welcoming players of all ages and experience</p>
+                    <p>A social rugby club based in Lockport, NY welcoming players of all ages and experience.</p>
+
+                    <p id="home-link-p">
+                        <a id="home-link" href="{{ url_for('home') }}">Click to see the latest events and announcements<i class="fa fa-arrow-circle-right"></i></a>
+                    </p>
                 </div>
             </div>
 
