add custom themes to auth0 widget

--- a/tridents/templates/_login.html
+++ b/tridents/templates/_login.html
@@ -7,6 +7,13 @@
             params: {
                 scope: 'openid email name picture'
             }
+        },
+        theme: {
+            logo: "{{ url_for('static', filename='img/tridents_shield.png') }}",
+            primaryColor: "#00602a"
+        },
+        languageDictionary: {
+            title: "Tri-County Tridents"
         }
     });
 
