--- a/tridents/templates/home.html
+++ b/tridents/templates/home.html
@@ -58,6 +58,7 @@
                 </div>
             {% endif %}
             <div class="column is-two-thirds">
+                <h2 class="title is-2"><i class="fa fa-fw fa-calendar"></i> Schedule</h2>
                 <div class="box" id="calendar">
                 </div>
             </div>
