adjust homepage columns, make calendar header bigger

--- a/tridents/templates/home.html
+++ b/tridents/templates/home.html
@@ -57,7 +57,7 @@
                     </aside>
                 </div>
             {% endif %}
-            <div class="column is-two-thirds">
+            <div class="column is-7">
                 <h2 class="title is-2"><i class="fa fa-fw fa-calendar"></i> Schedule</h2>
                 <div class="box" id="calendar">
                 </div>
