--- a/tridents/templates/layout.html
+++ b/tridents/templates/layout.html
@@ -94,7 +94,7 @@
         });
     })
 </script>
-{% include '_login.html' %}
+{% include 'includes/_login.html' %}
 {% block js %}{% endblock %}
 </body>
 </html>
