--- a/tridents/templates/splash.html
+++ b/tridents/templates/splash.html
@@ -66,7 +66,8 @@
                 <div class="column">
                     <h1 class="title is-1">Who are we?</h1>
                     <p class="content is-large">
-                        sick cunts that's who
+                        Our team is our family, and we strive to have fun both on and off the field.
+                        more goes here...
                     </p>
 
                 </div>
@@ -81,9 +82,51 @@
             <div class="columns">
                 <div class="column">
                     <h1 class="title is-1">Why rugby?</h1>
-                    <p class="content is-large is-dark">
-                        its fuckn awesome
-                    </p>
+                </div>
+            </div>
+            <div class="columns has-text-centered">
+                <div class="column is-one-third">
+                    <div class="content is-large">
+
+                        <h2 class="title">A Brotherhood for Life</h2>
+                        <p>blah blah blah</p>
+                    </div>
+                </div>
+                <div class="column is-one-third">
+                    <div class="content is-large">
+                        <h2 class="title">The World's Most Exciting Team Sport</h2>
+                        <p>blah blah blah</p>
+                    </div>
+                </div>
+                <div class="column is-one-third">
+                    <div class="content is-large">
+                        <h2 class="title">Get in Shape</h2>
+                        <p>blah blah blah</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="hero is-medium is-info" id="join-section">
+    <div class="hero-body">
+        <div class="container">
+            <div class="columns">
+                <div class="column">
+                    <div class="content is-large">
+                        <h1 class="title is-1">Come see what we're about!</h1>
+                        <p>
+                            We welcome all new players, even those who have never touched a rugby ball before.
+                            If you're interested, come to a practice!
+                            <a href="{{ url_for('home') }}">Click here to see the latest schedule</a>.
+                            We hold practices at two locations for the convenience of our team members,
+                            one in Lockport and one near Pembroke.
+                        </p>
+                    </div>
+                </div>
+                <div class="column">
+                    div
                 </div>
             </div>
         </div>
