add maps to splash

--- a/tridents/templates/splash.html
+++ b/tridents/templates/splash.html
@@ -125,9 +125,15 @@
                         </p>
                     </div>
                 </div>
+            </div>
+            <div class="columns">
                 <div class="column">
-                    div
+                    {% include 'includes/_lockport_map.html' %}
                 </div>
+                <div class="column">
+                    {% include 'includes/_pembroke_map.html' %}
+                </div>
+
             </div>
         </div>
     </div>
