more on splash page

--- a/tridents/templates/splash.html
+++ b/tridents/templates/splash.html
@@ -121,7 +121,9 @@
                             If you're interested, come to a practice!
                             <a href="{{ url_for('home') }}">Click here to see the latest schedule</a>.
                             We hold practices at two locations for the convenience of our team members,
-                            one in Lockport and one near Pembroke.
+                            one in Lockport and one near Pembroke. If you have any questions feel free to
+                            <a href="{{ url_for('contact') }}">contact us here</a> and we'll get back to you
+                            as soon as possible.
                         </p>
                     </div>
                 </div>
