--- a/tridents/templates/splash.html
+++ b/tridents/templates/splash.html
@@ -56,18 +56,22 @@
     </div>
 </section>
 
-<section class="hero is-medium is-light is-bold" id="why-rugby-section">
+<section class="hero is-medium is-light is-bold" id="about-section">
     <div class="hero-body">
         <div class="container">
             <div class="columns">
-                <div class="column is-narrow">
+                <div class="column is-5">
                     <img src="{{ url_for('static', filename='img/team2_square.jpg') }}" alt="" class="is-square" id="team-round">
                 </div>
                 <div class="column">
                     <h1 class="title is-1">Who are we?</h1>
                     <p class="content is-large">
                         Our team is our family, and we strive to have fun both on and off the field.
-                        more goes here...
+                        First and foremost we are all passionate about rugby, we play hard at our matches and we constantly
+                        ask more out of our players at practice. But we are also a social club, after the matches are over
+                        and the practices are done we are out enjoying ourselves and bonding with our teammates and
+                        fellow Western New York rugby players.
+
                     </p>
 
                 </div>
@@ -88,12 +92,14 @@
                 <div class="column is-one-third">
                     <div class="content is-large">
 
+                        <img src="{{ url_for('static', filename='img/brad.jpg') }}" alt="" class="is-square" id="celtic-fest">
                         <h2 class="title">A Brotherhood for Life</h2>
                         <p>blah blah blah</p>
                     </div>
                 </div>
                 <div class="column is-one-third">
                     <div class="content is-large">
+                        <img src="{{ url_for('static', filename='img/jim-running.jpg') }}" alt="" class="is-square" id="celtic-fest">
                         <h2 class="title">The World's Most Exciting Team Sport</h2>
                         <p>blah blah blah</p>
                     </div>
@@ -117,7 +123,7 @@
                     <div class="content is-large">
                         <h1 class="title is-1">Come see what we're about!</h1>
                         <p>
-                            We welcome all new players, even those who have never touched a rugby ball before.
+                            We welcome all new players, and no prior experience with rugby is necessary.
                             If you're interested, come to a practice!
                             <a href="{{ url_for('home') }}">Click here to see the latest schedule</a>.
                             We hold practices at two locations for the convenience of our team members,
